fix alignment on author sort message box

--- a/vufind/web/interface/themes/einetwork/css/styles.css
+++ b/vufind/web/interface/themes/einetwork/css/styles.css
@@ -2982,7 +2982,7 @@ ul.new-alert-box li {
 }
 
 .author-sort-message {
-	margin:10px 10px 20px 10px;
+	margin:10px 30px 20px 10px;
 	border:1px solid #c0c0c0;
 	padding:6px;
 	text-align: center;
